feat: Integrate PDF and Excel export capabilities
Adds necessary CDN links and global declarations for XLSX and jspdf libraries to enable data export functionality. Updates localStorage keys to v3 for potential future schema changes. Introduces view state management and enhances dashboard with visual data representations and export options. Refactors empty state UI for better user guidance.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>RupeeReceipts Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Excel Generation Library -->
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
+    <!-- PDF Generation Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
       body {
         font-family: 'Inter', sans-serif;
+      }
+      .chart-container {
+        transition: all 0.3s ease;
+      }
+      .chart-container:hover {
+        transform: translateY(-2px);
       }
     </style>
     <script type="importmap">
